<resources>
    <string name="app_name">ExampleFirebase</string>
    <string name="login">LOGIN</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="not_registered">Not Registered?</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign Out</string>
    <string name="home_page">Home page</string>
</resources>